fixed bug where calendar shows behind date picker

--- a/src/website/views/components/TimestampFilter/timestampfilter.module.css
+++ b/src/website/views/components/TimestampFilter/timestampfilter.module.css
@@ -3,10 +3,6 @@
     text-align: center;
   }
 
-.datepicker{
-  z-index: 100000000;
-}
-
 .center{
   text-align: center;
 }
